--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
-/* General Elements */
 body {
     margin: 0;
+    background-color: #F3E5D8;
+    border-radius: 5%;
+    width: 75% auto;
+
 } 
 
 .content {
@@ -8,7 +11,9 @@ body {
     font-weight: 400;
     margin: auto;
     width: 90%;
-    color: hsl(30, 10%, 34%);
+    padding: 5%;
+    background-color: white;
+    border-radius: 2%;
 }
 
 h1, h2 {
@@ -44,12 +49,6 @@ li::marker {
     color: hsl(14, 45%, 36%);
 }
 
-.block {
-    background-color:  hsl(30, 18%, 87%);
-    height: 10vh;
-    width: 103vw;
-}
-
 /* Dividers */
 hr.solid {
     border-top: 1px solid hsl(30, 54%, 90%);
@@ -75,14 +74,31 @@ section + .prep {
 }
 /* Footer */
 footer {
+    font-family: 'Young Serif', serif;
     text-align: center;
     padding: 5vh 0;
-    background-color: hsl(30, 18%, 87%);
     margin: 0%;
     height: 10vh;
-    width: 103vw;
 }
 
 .attribution {
     font-size: 16px;
+}
+
+div a {
+    color: hsl(14, 45%, 36%);
+    text-decoration: none;
+    font-weight: 400;
+}
+
+div a:hover {
+    font-weight: 600;
+}
+
+/*Media Queries */
+@media (min-width: 600px)  {
+    body {
+        max-width: 800px;
+        margin: auto;
+    }
 }
